# Sleep_stick

./: .gitignore  1.pth  CMakeLists.txt  CMakeLists.txt.user.2a887c3  README.md  ddd_0.mat  model_2.py
BCIIA/Calculate/: CMakeLists.txt
BCIIA/Calculate/src/: recognition.cpp  recognition.h  tskfatigue.cpp  tskfatigue.h
BCIIA/DataOperation/Amplifier/filter/src/: filter.cpp  iirfilter.cpp  iirfilter.h
BCIIA/DataOperation/Amplifier/src/: datathread.cpp
BCIIA/DataOperation/FileStorage/src/: filestorage.cpp  filestorage.h
BCIIA/DataOperation/src/: dataoperation.cpp  dataoperation.h
BCIIA/UI/curvegroup/src/: curvegroup.cpp  curvegroupconfig.cpp
BCIIA/src/: bciia.cpp  bciia.h
LocalAmplifer/SelfAmplifer/: CMakeLists.txt
MainWidget/src/: mainwidget.cpp
SelfAmplifer/: CMakeLists.txt  CMakeLists.txt.user.2a887c3
SelfAmplifer/src/: MainWindow.cpp  MainWindow.h  eegdata.cpp  mainwindow.ui  selfamplifer.cpp  selfamplifer.h
SelfAmplifer/src/Bluetooth/: BluetoothDeviceController.cpp  BluetoothDeviceController.h  DataParser.cpp  DataParser.h
SelfAmplifer/test/: CMakeLists.txt  main.cpp
data_test/: das_0.mat  das_1.mat  dddd_0.mat  dddd_1.mat  gr_0.mat  grr_0.mat  额贴新协议修订版V0.5(1).xlsx
fatigue/src/: chart.cpp  chart.h  fatiguereswidget.cpp  registerinfo.cpp
model/: My_main.py  Mymodel.py  data_trainer.py  data_trainer1.py  data_trainer2.py  loss_function.py  main.py  model_origin.py  preprocess.py  run_with_ui.py  train.py  ui.py
onnx/: My_main.py  Mymodel.py  data_trainer.py  export_ndtrs_onnx.py  export_onnx.py  offline_train_test.py  real_ndtrs_model.onnx  wsm.pth
sleep/: CMakeLists.txt
sleep/src/: mathgame.cpp  mathgame.h  mathgame.ui
sleep/test/: CMakeLists.txt  main.cpp
src/: EEGProcessor.cpp  EEGProcessor.h  ICA.cpp  ICA.h  ICAProcessor.cpp  ICAProcessor.h  LogisticRegression.cpp  LogisticRegression.h  platformwidget.cpp  platformwidget.h
